Organizing query files by method, updating docs with x-status values for input variables, adding counts to requests for plot-observations and taxon observations, updating some names for consistency (comm classes -> community-classifications, taxa -> taxon-observations, comm concepts -> community-concepts)
